--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <body>
                 <div class="container-fluid"
-                    style="background: var(--bs-light);margin-top: 3px;margin-bottom: 4px;border-style: solid;border-color: var(--bs-body-color);">
+                    style="background: var(--bs-light);margin-top: 3px;margin-bottom: 4px;border-radius: 7px;">
                     <div class="row">
                         <div class="col" style="margin: 7px;padding-top: 4px;"><label class="form-label"
                                 style="font-weight: bold;color: var(--bs-pink);">Select Device:&nbsp; &nbsp;
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="container-fluid"
-                    style="background: var(--bs-light);margin-top: 3px;margin-bottom: 4px;border-style: solid;border-color: var(--bs-body-color);">
+                    style="background: var(--bs-light);margin-top: 3px;margin-bottom: 4px;border-radius: 7px;">
                     <label class="form-label" style="padding-top: 27px;font-weight: bold;">Device Data</label>
                     <div class="row">
                         <div class="col" style="margin-top: 5px;margin-bottom: 4px;"><select>
