--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
             </nav>
             
-             <div class="container-fluid" style="background: var(--bs-light);margin-top: 4px;margin-bottom: 4px;border-radius: 7px;">
+             <div class="container-fluid" style="background: var(--bs-light);margin-top: 4px;margin-bottom: 4px;border-radius: 7px;margin-left: 7px;">
         <div class="row">
             <div class="col" style="margin: 7px;padding-top: 4px;"><label class="form-label" style="color: #ff9955;margin: 3px;padding-top: 2px;padding-left: 2px; padding-bottom: 2px;">Select Device:&nbsp;</label>
                 <select style="margin: 3px;padding-top: 2px;padding-left: 2px; padding-bottom: 2px;">
@@ -98,10 +98,10 @@
         </div>
             <div class="col" style="margin: 7px;padding-top: 4px;"><label class="form-label" style="color: #ff9955;margin: 3px;padding: 2px;">From Date:&nbsp;</label><input type="date" style="margin: 3px;padding: 2px;"></div>
             <div class="col" style="margin: 7px;padding-top: 4px;"><label class="form-label" style="color: #ff9955;margin: 3px;padding: 2px;">To Date:&nbsp;</label><input type="date" style="margin: 3px;padding: 2px;"></div>
-            <div class="col text-end" style="margin: 7px;padding-top: 4px;"><button class="btn btn-success" type="submit" style="margin: 3px;border-radius: 6px;">Submit</button></div>
+            <div class="col text-end" style="margin: 7px;padding-top: 4px;"><button class="btn btn-success" type="submit" style="margin: 7px;margin-right: 20px;;border-radius: 6px;">Submit</button></div>
         </div>
     </div>
-    <div class="container-fluid" style="background: var(--bs-light);margin-top: 4px;margin-bottom: 4px;border-radius: 7px;"><label class="form-label" style="color: #ff9955;margin-top: 12px;margin-left:4;padding-top: 3px;padding-bottom: 3px;padding-left: 10px;">Device Data</label>
+    <div class="container-fluid" style="background: var(--bs-light);margin-top: 4px;margin-bottom: 4px;border-radius: 7px;margin-left: 7px;"><label class="form-label" style="color: #ff9955;margin-top: 12px;margin-left:4;padding-top: 3px;padding-bottom: 3px;padding-left: 10px;">Device Data</label>
         <div class="row" style="margin-top: 7px;margin-bottom: 7px;margin-left: 3px;margin-right: 3px;padding: 3px;">
             <div class="col" style="margin-top: 5px;margin-bottom: 4px;"><select style="margin-top: 3px;margin-bottom: 3px;margin-left: 3px;">
                     <option value="" selected="">10</option>
@@ -115,7 +115,7 @@
         </div>
         <div class="row">
             <div class="col" style="margin-right: 3px;margin-left: 3px;">
-                <div class="table-responsive" style="margin-right: 0px;margin-top: 3px;margin-bottom: 3px;">
+                <div class="table-responsive" style="margin-right: 17px;margin-top: 3px;margin-bottom: 3px;">
                     <table class="table">
                         <thead>
                             <tr style="background: #ff6600;border-style: solid;border-color: var(--bs-cyan);">
@@ -145,7 +145,7 @@
         <div class="row">
             <div class="col-9" style="margin-top: 4px;margin-bottom: 7px;"><label class="col-form-label" style="margin-top: 2px;margin-bottom: 2px;margin-left: 4px;">Showing 0 to 0 of 0 entries</label></div>
             <div class="col-3" style="text-align: right;margin-top: 4px;margin-bottom: 7px;">
-                <div class="btn-group" role="group" style="margin-top: 2px;margin-bottom: 2px;margin-right: 4px;"><button class="btn btn-primary" type="button" style="background: transparent;border-style: solid;border-color: var(--bs-dark);color: var(--bs-body-color);">Previous</button><button class="btn btn-primary" type="button" style="background: transparent;border-style: solid;border-color: var(--bs-dark);color: var(--bs-body-color);">Next</button></div>
+                <div class="btn-group" role="group" style="margin-top: 2px;margin-bottom: 2px;margin-right: 30px;"><button class="btn btn-primary" type="button" style="background: transparent;border-style: solid;border-color: var(--bs-dark);color: var(--bs-body-color);">Previous</button><button class="btn btn-primary" type="button" style="background: transparent;border-style: solid;border-color: var(--bs-dark);color: var(--bs-body-color);">Next</button></div>
             </div>
         </div>
     </div>
