change container margin

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
             </nav>
             
-             <div class="container-fluid" style="background: var(--bs-light);margin-top: 4px;margin-bottom: 4px;border-radius: 7px;margin-left: 7px;">
+             <div class="container-flex" style="background: var(--bs-light);margin-top: 4px;margin-bottom: 4px;border-radius: 7px;margin-left: 7px;margin-right: 10px;">
         <div class="row">
             <div class="col" style="margin: 7px;padding-top: 4px;"><label class="form-label" style="color: #ff9955;margin: 3px;padding-top: 2px;padding-left: 2px; padding-bottom: 2px;">Select Device:&nbsp;</label>
                 <select style="margin: 3px;padding-top: 2px;padding-left: 2px; padding-bottom: 2px;">
@@ -101,7 +101,7 @@
             <div class="col text-end" style="margin: 7px;padding-top: 4px;"><button class="btn btn-success" type="submit" style="margin: 7px;margin-right: 20px;;border-radius: 6px;">Submit</button></div>
         </div>
     </div>
-    <div class="container-fluid" style="background: var(--bs-light);margin-top: 4px;margin-bottom: 4px;border-radius: 7px;margin-left: 7px;"><label class="form-label" style="color: #ff9955;margin-top: 12px;margin-left:4;padding-top: 3px;padding-bottom: 3px;padding-left: 10px;">Device Data</label>
+    <div class="container-flex" style="background: var(--bs-light);margin-top: 4px;margin-bottom: 4px;border-radius: 7px;margin-left: 7px;margin-right: 10px;"><label class="form-label" style="color: #ff9955;margin-top: 12px;margin-left:4;padding-top: 3px;padding-bottom: 3px;padding-left: 10px;">Device Data</label>
         <div class="row" style="margin-top: 7px;margin-bottom: 7px;margin-left: 3px;margin-right: 3px;padding: 3px;">
             <div class="col" style="margin-top: 5px;margin-bottom: 4px;"><select style="margin-top: 3px;margin-bottom: 3px;margin-left: 3px;">
                     <option value="" selected="">10</option>
